# advent-of-code-cpp-2024

./: CMakeLists.txt  README.md
cmake/: CPM.cmake
src/: app.h  day1.cpp  day2.cpp  day3.cpp  result.h
